
                     ngIRCd - Next Generation IRC Server

                        (c)2001-2010 Alexander Barton,
                    alex@barton.de, http://www.barton.de/

               ngIRCd is free software and published under the
                   terms of the GNU General Public License.

                               -- ChangeLog --


ngIRCd Release 17

  - New configuration option "SyslogFacility" to define the syslog "facility"
    (the "target"), to which ngIRCd should send its log messages.
    Possible values are system dependant, but most probably "auth", "daemon",
    "user" and "local1" through "local7" are possible values; see syslog(3).
    Default is "local5" for historical reasons.
  - Dump the "internal server state" (configured servers, established
    connections and known clients) to the console or syslog when receiving
    the SIGUSR2 signal and debug mode is enabled.
  - Enable the daemon to disable and enable "debug mode" on runtime using
    signal SIGUSR1, when debug code is compiled in, not only on startup
    using the command line parameters.
  - Signal handler: added new 'delayed' signal handlers, including fallback
    to deprecated sysv API. And removed global NGIRCd_SignalRehash variable.
  - IO: add io_cloexec() to set close-on-exec flag.
  - ng_ipaddr.h: include required assert.h header.
  - Conn_SyncServerStruct(): test all connections; and work case insensitive
  - configure script: correctly indent IPv6 yes/no summary output.
  - Don't reset My_Connections[Idx].lastping when reading data, so the
    client lag debug-output is working again.
  - Implement user mode "x": hostname cloaking (closes: #102).
  - Make configure switch "--docdir" work (closes: #108).
  - Reformat and update FAQ.txt a little bit.
  - INSTALL: mention SSL, IPv6, and changed handling of MotdFile.
  - Change MOTD file handling: ngIRCd now caches the contens of the MOTD
    file, so the daemon now requires a HUP signal or REHASH command to