@@ -144,6 +144,10 @@
 	# Don't use PAM, even if ngIRCd has been compiled with support for it.
 	;NoPAM = no
 
+	# Don't use ZeroConf service registration, even if ngIRCd has been
+	# compiled with support for it (e.g. Howl, Avahi, Mac OS X).
+	;NoZeroConf = no
+
 	# try to connect to other irc servers using ipv4 and ipv6, if possible
 	;ConnectIPv6 = yes
 	;ConnectIPv4 = yes
